# linamp2

./: CLAUDE.md  CMakeLists.txt  README.md  uiassets.qrc  webui.qrc
debian/: changelog
docs/: API.md  DEPLOYMENT.md  GEISS_ANALYSIS.md  GEISS_FOR_LINAMP_DESIGN.md  LINAMP_VIZ_AUDIT.md  README.md  SCREENSAVER.md  WEBUI.md  api-examples.sh  architecture.md  audio-sources.md  build-and-deploy.md  media-player.md  python-integration.md  ui-system.md
docs/superpowers/plans/: 2026-06-25-linamp-http-api.md  2026-06-25-linamp-web-ui-phase1.md  2026-06-25-linamp-web-ui-phase2.md  2026-06-25-linamp-web-ui-phase3.md  2026-06-25-linamp-web-ui-phase4.md
docs/superpowers/specs/: 2026-06-25-linamp-http-api-design.md  2026-06-25-linamp-web-ui-design.md
src/api/: apiserver.cpp  apiserver.h  ssebroker.cpp  ssebroker.h  webstatehub.cpp  webstatehub.h
src/audiosource-coordinator/: audiosourcecoordinator.cpp  audiosourcecoordinator.h
src/audiosourcecd/: audiosourcecd.cpp
src/audiosourcefile/: mediaplayer.cpp
src/audiosourcepython/: audiosourcepython.cpp
src/vban/: vbansender.cpp  vbansender.h
src/view-avs/: avsaudiodata.cpp  avsaudiodata.h  avseffect.h  avsengine.cpp  avsengine.h  avsframebuffer.cpp  avsframebuffer.h  avsview.cpp  avsview.h
src/view-avs/effects/: avsblur.cpp  avsblur.h  avsbufferblend.cpp  avsbufferblend.h  avsclearscreen.cpp  avsclearscreen.h  avsclock.cpp  avsclock.h  avscolormodifier.cpp  avscolormodifier.h  avsdynamicmovement.cpp  avsdynamicmovement.h  avsfadeout.cpp  avsfadeout.h  avsgrain.cpp  avsgrain.h  avsmirror.cpp  avsmirror.h  avsmosaic.cpp  avsmosaic.h  avsmovement.cpp  avsmovement.h  avsonbeatclear.cpp  avsonbeatclear.h  avsring.cpp  avsring.h  avsstarfield.cpp  avsstarfield.h  avssuperscope.cpp  avssuperscope.h  avswater.cpp  avswater.h
src/view-basewindow/: mainwindow.cpp  mainwindow.h  viewtransition.cpp  viewtransition.h
src/view-geiss/: audioanalyzer.cpp  audioanalyzer.h  colorstate.h  effectengine.cpp  effectengine.h  geisseffect.h  geisswidget.cpp  geisswidget.h  warpengine.cpp  warpengine.h  warpmapgenerator.cpp  warpmapgenerator.h  warpparams.h
src/view-geiss/effects/: chasereffect.cpp  chasereffect.h  grideffect.cpp  grideffect.h  nuclideeffect.cpp  nuclideeffect.h  radialwaveeffect.cpp  radialwaveeffect.h  shadebobseffect.cpp  shadebobseffect.h  solarparticles.cpp  solarparticles.h  solidlineeffect.cpp  solidlineeffect.h  waveformeffect.cpp  waveformeffect.h
src/view-menu/: mainmenuview.cpp  mainmenuview.h  mainmenuview.ui
src/view-player/: playerview.cpp  playerview.h
src/view-screensaver/: clockthemes.h  screensaverview.cpp  screensaverview.h  screensaverview.ui
webui/: api.js  app.css  app.js  index.html
